# examples

buffers-basics/: Cargo.toml
buffers-basics/examples/: manual_redeeming.rs  redeem_on_drop.rs
buffers-basics/src/: data.rs  main.rs
platform-dependant-screen-snapper/: Cargo.toml
platform-dependant-screen-snapper/examples/autosnapper/: capture.rs  data.rs  main.rs
platform-dependant-screen-snapper/src/: lib.rs  png_saver.rs  wayshot_capturer.rs  xcap_capturer.rs
screen-mirror/: Cargo.toml
screen-mirror/examples/: client.rs  server.rs
screen-mirror/src/: lib.rs
screen-recorder/: Cargo.toml
screen-recorder/examples/recorder/: data.rs  main.rs
screen-recorder/src/: lib.rs  png_saver.rs  wayshot_capturer.rs  xcap_capturer.rs
screen-snapper/examples/autosnapper/: main.rs
screen-snapper/src/: lib.rs  png_saver.rs  wayshot_capturer.rs  xcap_capturer.rs
screen-stream/: Cargo.toml
screen-stream/.cargo/: config.toml
screen-stream/examples/: client.rs  server.rs
screen-stream/scripts/: vp9_client.sh  vp9_server.sh  x264_client.sh  x264_server.sh
screen-stream/src/: types.rs
screen-stream/utils/: env.sh
y4m-player/: Cargo.toml
y4m-player/src/: color_cast.rs  main.rs  types.rs
