[package]
name = "buffers-basics"
version = "0.1.0"
edition = "2024"

[dependencies.tokio]
version = "1.44.2"
features = ["rt-multi-thread"]

[dependencies.remotia]
# path = "../../remotia/crates/remotia"
git = "https://github.com/remotia/remotia"
branch = "cargo/version_0.1.2"
features = ["buffers"]

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
