[package]
name = "platform-dependant-screen-snapper"
version = "0.1.0"
edition = "2024"

[features]
default = ["wayshot"]
xcap = ["dep:xcap"]
wayshot = ["dep:libwayshot"]

[dependencies]
async-trait = "0.1.88"
bon = "3.5.1"
env_logger = "0.11.8"
log = "0.4.27"
image_025 = { package = "image", version = "0.25" }
image_024 = { package = "image", version = "0.24" }
libwayshot = { version = "0.3.0", optional = true }
xcap = { version = "0.4.1", optional = true }

[dependencies.tokio]
version = "1.44.2"
features = ["rt-multi-thread"]

[dependencies.remotia]
version = "0.1.0"
features = ["capture", "buffers"]
