[package]
name = "platform-dependant-screen-snapper"
version = "0.1.0"
edition = "2024"

[features]
default = ["wayshot"]
xcap = ["dep:xcap"]
wayshot = ["dep:libwayshot"]

[dependencies]
async-trait = "0.1.88"
bon = "3.5.1"
env_logger = "0.11.8"
log = "0.4.27"
image = "0.25"

# Using a specific libwayshot commit as the version on crate is not updated to work with the latest version of image.rs
libwayshot = { git = "https://github.com/waycrate/wayshot", rev = "7509281", optional = true }

xcap = { version = "0.4.1", optional = true }

[dependencies.tokio]
version = "1.44.2"
features = ["rt-multi-thread"]

[dependencies.remotia]
version = "0.1.0"
features = ["capture", "buffers"]
