[package]
name = "screen-recorder"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
bon = "3.5.1"
env_logger = "0.11.8"
image = "0.25.6"
log = "0.4.27"
xcap = "0.4.1"

[dependencies.tokio]
version = "1.44.2"
features = ["rt-multi-thread"]

[dependencies.remotia]
version = "0.1.0"
features = ["capture", "buffers"]
