[package]
name = "screen-stream"
version = "0.1.0"
edition = "2021"

[dependencies.tokio]
version = "1.28.2"
features = ["rt", "rt-multi-thread", "macros", "net"]

[dependencies.remotia]
path = "../../remotia"
features = ["buffers", "capture", "render"]

[dependencies]
remotia-ffmpeg-codecs = { path = "../../remotia-ffmpeg-codecs" }
remotia-srt = { path = "../../remotia-srt" }
log = "0.4.19"
env_logger = "0.10.0"
clap = "4.3.3"
