[package]
name = "screen-stream"
version = "0.1.0"
edition = "2021"

[package.metadata.vcpkg]
dependencies = ["llvm:x64-windows-static-md", "ffmpeg[x264,vpx]:x64-windows-static-md"]
git = "https://github.com/microsoft/vcpkg"
branch = "master"

[dependencies.tokio]
version = "1.28.2"
features = ["rt", "rt-multi-thread", "macros", "net"]

[dependencies.remotia]
path = "../../remotia"
features = ["buffers", "capture", "render", "profilation", "serialization"]

[dependencies]
log = "0.4.19"
remotia-ffmpeg-codecs = { path = "../../remotia-ffmpeg-codecs" }
remotia-srt = { path = "../../remotia-srt" }
bincode = "2.0.0-rc.3"
env_logger = "0.10.0"
clap = "4.3.3"
